chore: add Gradle 9 to the test matrix
Modifications:

* build with Java 21 (highest version supported in our gradle range) but make sure to emit Java 11 bytecode
* build with Gradle 9.1.0
* as we now execute the tests with Java 21, Gatling functional tests need some --add-opens JVM options
* as we now execute the tests with Java 21, Spock needs an --add-opens JVM option
* GatlingEnterprisePackageTask needs to be abstract now