@@ -1,16 +1,26 @@
 plugins {
   id 'java-gradle-plugin'
-  id 'com.gradle.plugin-publish' version '1.3.1'
+  id 'com.gradle.plugin-publish' version "2.0.0"
   id 'groovy'
 }
 
 group = "gradle.plugin.io.gatling.gradle"
 
+compileJava {
+  options.release = 11
+}
+
+compileGroovy {
+  options.release = 11
+}
+
 java {
   toolchain {
-    languageVersion.set(JavaLanguageVersion.of(11))
+    // highest Java version supported by the current Gradle range we support (see GatlingFuncSpec)
+    languageVersion.set(JavaLanguageVersion.of(21))
   }
 }
+
 jar {
   manifest {
     attributes 'Implementation-Version': project.version
@@ -25,10 +35,10 @@ dependencies {
   implementation "io.gatling:gatling-enterprise-plugin-commons:1.20.2"
   implementation "io.gatling:gatling-shared-cli:0.0.6"
 
-  testImplementation('org.spockframework:spock-core:2.3-groovy-3.0') {
+  testImplementation('org.spockframework:spock-core:2.3-groovy-4.0') {
     exclude module: 'groovy'
   }
-  testImplementation 'org.spockframework:spock-junit4:2.3-groovy-3.0'
+  testImplementation 'org.spockframework:spock-junit4:2.3-groovy-4.0'
   testImplementation('com.github.stefanbirkner:system-rules:1.19.0') {
     exclude module: 'junit-dep'
   }
@@ -44,6 +54,8 @@ test {
     showStandardStreams = false
   }
   useJUnitPlatform()
+  // required for Spock, see https://docs.gradle.org/current/userguide/upgrading_version_7.html#remove_test_add_opens
+  jvmArgs = ["--add-opens=java.base/java.util=ALL-UNNAMED"]
 }
 
 gradlePlugin {
